@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-11T08:27:16Z",
-  "count_outdated" : 574,
-  "uniques_outdated" : 330,
-  "count" : 596,
+  "timestamp" : "2022-10-11T16:28:40Z",
+  "count_outdated" : 576,
+  "uniques_outdated" : 331,
+  "count" : 597,
   "uniques" : 342,
   "clones" : [
-    {
-      "timestamp": "2022-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-28T00:00:00Z",
       "count": 3,
