@@ -1,3 +1,11 @@
+2022-10-11T16:28:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3228566987
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 330 574 / 342 596
+* notice: next accum: outdated-unq outdated-all / unq all: 331 576 / 342 597
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-27] / []
+
 2022-10-11T08:27:16Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3225277530
 * notice: last 14d: unq all: 5 22
